# python-template

./: .pre-commit-config.yaml  README.md  pyproject.toml
python_template/: main.py
tests/: test_sample.py
